erDiagram
    USER {
        bigint id PK
        varchar email UK
        varchar password
    }

    ROLE {
        bigint id PK
        varchar name UK
    }

    USER_ROLE {
        bigint user_id FK
        bigint role_id FK
    }

    CATEGORY {
        bigint id PK
        varchar name UK
        varchar description
    }

    SUPPLIER {
        bigint id PK
        varchar name
        varchar contact_email
        varchar phone
        bigint version
    }

    PRODUCT {
        bigint id PK
        varchar name
        varchar description
        decimal price
        integer stock
        varchar sku
        bigint category_id FK
        bigint supplier_id FK
        timestamp created_at
        timestamp updated_at
        bigint version
    }

    ORDER {
        bigint id PK
        varchar customer_name
        varchar customer_email
        varchar status
        decimal total
        timestamp created_at
        timestamp updated_at
    }

    ORDER_ITEM {
        bigint id PK
        bigint order_id FK
        bigint product_id FK
        integer quantity
        decimal unit_price
    }

    CATEGORY ||--o{ PRODUCT : "has"
    SUPPLIER ||--o{ PRODUCT : "supplies"
    ORDER ||--o{ ORDER_ITEM : "contains"
    PRODUCT ||--o{ ORDER_ITEM : "ordered_in"
    USER ||--o{ USER_ROLE : "has"
    ROLE ||--o{ USER_ROLE : "assigned_to"
